--- a/lectures/Lecture03-Areal-Data/Areal AutoCorr.Rmd
+++ b/lectures/Lecture03-Areal-Data/Areal AutoCorr.Rmd
@@ -2,39 +2,26 @@
 output: html_document
 ---
 
-
 # SISMID Spatial Satistics
-# Data Lab 3 Working with Areal Data 
-***
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE,
-                      warning = FALSE,
-                      message = FALSE)
-```
+# Data Lab 3 Working with Areal Data
+
+------------------------------------------------------------------------
 
 # 3.1 Working with Spatial Polygons
 
-We will first load a standard data frame consisting of several county-level variables: 
+We will first load a standard data frame consists of several county-level variables:
 
-* FIPS: 5-digit unique code for county
-* Area: full name of the county
-* State: Alabama or Georgia
-* Population: total population in 2007
-* Cases: # of chlamydia cases in 2000
-* Income: median household income from Census 2000
-* inc: chlamydia incidence per 10,000 population
+-   FIPS: 5-digit unique code for county
+-   Area: full name of the county
+-   State: Alabama or Georgia
+-   Population: total population in 2007
+-   Cases: \# of chlamydia cases in 2000
+-   Income: median household income from Census 2000
+-   inc: chlamydia incidence per 10,000 population
 
 ```{r}
 library(here)
-library(sf)
-library(maps)
-library(stringr)
-library(colorRamps)
-library(ggplot2)
-library(spdep)
-library(DCluster)
-
 load ( here("data", "Data.RData") )
 summary (dat)
 ```
@@ -42,7 +29,8 @@ summary (dat)
 Next, we will read in county spatial polygons for the contiguous US in the *maps* package. R can also read in any shapefile via the *sf* package. The *st_as_sf* function converts the map object to an *sf* object, which encodes the ID, polygons, and any unit-specific data value.
 
 ```{r, warning=FALSE}
-
+library (sf)
+library (maps)
 
 county.map = map ("county", region = c("alabama", "georgia"),fill = T,  plot = F)
 county.map = sf::st_as_sf(county.map) #Convert from map object to sf
@@ -52,8 +40,8 @@ plot (st_geometry(county.map)) #only plot the polygons
 
 Our sf object contains several attributes:
 
-* $ID = county identifier string
-* $geom:sfc_MULTIPOLYGON = sets of polygons (n = 226)
+-   \$ID = county identifier string
+-   \$geom:sfc_MULTIPOLYGON = sets of polygons (n = 226)
 
 ```{r}
 str (county.map)
@@ -62,15 +50,16 @@ attributes (county.map)
 
 Let's look some meta data information:
 
-* In GIS terminology, each polygon is called a feature.
-* Dimension: XY means the feature is 2-dimensional 
-* Bounding box: the max/min used for plotting
-* Geodetic CRS: the projection/datum
+-   In GIS terminology, each polygon is called a feature.
+-   Dimension: XY means the feature is 2-dimensional
+-   Bounding box: the max/min used for plotting
+-   Geodetic CRS: the projection/datum
 
 ```{r}
 print (county.map, n = 2)
 ```
-There are several ways we can extract information from an sf object. 
+
+There are several ways we can extract information from an sf object.
 
 ```{r}
 
@@ -83,7 +72,7 @@ poly1
 plot (poly1)
 ```
 
-Our first data task is to merge the dataset with the sf object. In our case, the counties are ordered by row exactly the same for the two datasets and we can use *cbind*. In general, it's good to merge by polygon ID. 
+Our first data task is to merge the dataset with the sf object. In our case, the counties are ordered by row exactly the same for the two datasets and we can use *cbind*. In general, it's good to merge by polygon ID.
 
 ```{r}
 
@@ -92,7 +81,7 @@ dat.areal = cbind (county.map, dat)
 dat.areal[1:3,]
 
 #Option 2
-
+library (stringr)
 data (county.fips) #Load county 5-digit FIPS code
 county.map$FIPS = county.fips$fips[ match (county.map$ID, county.fips$polyname)]
 county.map$FIPS =  str_pad (county.map$FIPS, 5, "left", "0")
@@ -100,20 +89,21 @@ all (county.map$FIPS %in% dat$FIPS)
 dat.areal2 = merge (county.map, dat, by = "FIPS")
 ```
 
-The object *dat.areal*$* now contains the polygon information and the dataframe we would like to. We can do standard operations on the dataframe now. We can also create chloropleth map!
+The object *dat.areal*\$\* now contains the polygon information and the dataframe we would like to. We can do standard operations on the dataframe now. We can also create chloropleth map!
 
 ```{r}
 dim (dat.areal)
 names(dat.areal)
 
-
+library(colorRamps)
 plot (dat.areal["Income"], main = "Median Household Income in 2000")
 plot (dat.areal["inc"],  main = "Chlamydia Incidence (per 10,000) in 2007")
 ```
 
-Or use ggplot. 
+Or use ggplot.
 
 ```{r}
+library (ggplot2)
 ggplot() + geom_sf (data = dat.areal, aes (fill = Income))+
   labs(title="Median Household Income in 2000")   +scale_fill_gradient2(low = "white",high = "red", limits = c(0, 80000))
 
@@ -124,11 +114,10 @@ ggplot() +  geom_sf (data = dat.areal, aes (fill = inc))+
 
 # 3.2 Defining Spatial Proximity
 
-The package *spdep ()* contains a suite of functions for working with areal spatial data. The *poly2nb ()* function identifies neighbours using a spatial polygons. Neighbours are defined as sharing a common boundary point.The default in poly2nb uses the queen's case definition that is two polygons are neighbours even if they share a single boundary. This can be suppressed by the *queen = * option. 
-
+The package *spdep ()* contains a suite of functions for working with areal spatial data. The *poly2nb ()* function identifies neighbours using a spatial polygons. Neighbours are defined as sharing a common boundary point.The default in poly2nb uses the queen's case definition that is two polygons are neighbours even if they share a single boundary. This can be suppressed by the *queen =* option.
 
 ```{r, warning = FALSE}
-
+library (spdep)
 
 #Because our shapefile here is un-projected, distance operations can be difficult. Alternatively, we can project the data to, for example, the Lambert Conformal Conic North America.
 dat.areal_proj = st_transform(dat.areal, crs = "ESRI:102004")
@@ -141,10 +130,10 @@ summary (nb)
 ```
 
 The function *nb2mat ()* then creats a proximity/weight matrix using the neighbourhood information. Here we have several options to define weights:
- 
- * B: basic binary
- * W: row standardized (sum of all entries = n)
- 
+
+-   B: basic binary
+-   W: row standardized (sum of all entries = n)
+
 ```{r}
 W = nb2mat (nb, style = "B") 
 center_proj = st_centroid(dat.areal_proj) ##Extract centroids of polygons
@@ -177,7 +166,7 @@ legend ("topright", legend =c("<25 km", "< 40 km"), col= c("blue", "red"), pch =
 
 # 3.3 Spatial Lag Regression
 
-Let's first produce a Moran Plot. We first show how to do it by hand. The *moran.plot ()* function in *spdep* will also identify high influence points. 
+Let's first produce a Moran Plot. We first show how to do it by hand. The *moran.plot ()* function in *spdep* will also identify high influence points.
 
 ```{r}
 Y = dat.areal$Income
@@ -194,7 +183,7 @@ abline(0,1)
 moran.plot (Y, nb2listw(nb))
 ```
 
-Calculate Moran's I by hand and perform asymptotic hypothesis test. 
+Calculate Moran's I by hand and perform asymptotic hypothesis test.
 
 ```{r}
 ybar = mean (Y)
@@ -213,8 +202,8 @@ moran.test (Y, col.W)
 moran.test (Y, col.W, randomisation = FALSE)
 ```
 
-
 Moran's I hypothesis test by permutation
+
 ```{r}
 I.perm = moran.mc (Y, col.W, 10000)
 I.perm
@@ -236,15 +225,16 @@ hist (C.perm$res, main = "Geary's C under Null Hypothesis", xlab = "", ylab ="")
 abline (v = 0.4295, col = 2, lwd = 4)
 text (0.5, 15000, "Observed \n Geary's C", col = 2)
 ```
+
 # 3.4 Local Moran's I
 
 To estimate local Moran's I for chlaymia incidence rate, we need a first-order adjacency matrix W. The *localmoran ()* results gives:
 
-* Ii = local Moran's I statistic
-* E.Ii = expected value under H_0 (i.e. no clustering)
-* Var.Ii = asymptotic variance under H_0
-* Z.Ii = asymptotic test-statistic
-* Pr(Z>0) = one-sided p-value under asymptotic normality
+-   Ii = local Moran's I statistic
+-   E.Ii = expected value under H_0 (i.e. no clustering)
+-   Var.Ii = asymptotic variance under H_0
+-   Z.Ii = asymptotic test-statistic
+-   Pr(Z\>0) = one-sided p-value under asymptotic normality
 
 ```{r, warning=FALSE}
 Y = dat.areal$inc
@@ -277,8 +267,7 @@ ggplot () + geom_sf (data = plot.dat, aes (fill = p)) + facet_wrap(~type)+
 
 ```
 
-To avoid relying on asymptotic normality, we can also perform a permutation test. Here we re-sample the incidence data with replacement 10,000 times. Each time, we calculate the local Moran's I statistics. First, note that under *H_0* of no spatial dependence, the local Moran's I statistics exhibit large skewness compared to a normal distribution. 
-
+To avoid relying on asymptotic normality, we can also perform a permutation test. Here we re-sample the incidence data with replacement 10,000 times. Each time, we calculate the local Moran's I statistics. First, note that under *H_0* of no spatial dependence, the local Moran's I statistics exhibit large skewness compared to a normal distribution.
 
 ```{r}
 #Number of permutation
@@ -314,10 +303,11 @@ ggplot () + geom_sf (data = dat.areal, aes (fill = MoranI_perm_p)) +
 
 # 3.5 Global Model-Based Cluster Detection
 
-We will now focus on performing cluster detection specifically for case incidence data. We will use functions in the R package *DCluster*. These functions often require the input as a dataset with two variable names: Observed and Expected. 
-First, we perform tests to see if spatial clustering exists. 
+We will now focus on performing cluster detection specifically for case incidence data. We will use functions in the R package *DCluster*. These functions often require the input as a dataset with two variable names: Observed and Expected. First, we perform tests to see if spatial clustering exists.
 
 ```{r}
+library (DCluster)
+
 dismap = data.frame (Observed = dat.areal$Cases, Pop = dat.areal$Population)
 theta_0 = sum(dismap$Observed)/sum(dismap$Pop)
 dismap$Expected = dismap$Pop * theta_0
