--- a/lectures/Lecture08-SpaceTime-Process/SpaceTime.RMD
+++ b/lectures/Lecture08-SpaceTime-Process/SpaceTime.RMD
@@ -15,8 +15,7 @@ output:
 Specify working directory and load R data file. The dataframe contains annual cases of chlamydia for 18 years (2002 to 2019) for each of the 159 county in Georgia. The rate is also given per 100,000 people. 
 
 ```{r}
-setwd ("Y:/Teaching/Bios737 Spatial Analysis/Lectures/SISMID Labs/P8")
-load ("Chlamydia_GA.RData")
+load ("/Users/user/Documents/2023-SISMID-Module-9-Spatial-Statistics/data/Chlamydia_GA.RData")
 str (dat)
 ```
 
